--- a/startbootstrap-full-slider-1.0.4/css/full-slider.css
+++ b/startbootstrap-full-slider-1.0.4/css/full-slider.css
@@ -3,12 +3,29 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-
-html,
-body {
-    height: 100%;
+body{background-color:#2c3e50; font-family:'Droid Sans',Arial,Verdana,sans-serif !important;}
+@media only screen and (max-width: 500px) {
+    .slideshow{height:40vh;}
+    #header{height:20vh !important;}
+    #wrapper{margin-top:22vh !important;}
 }
+#header{
+    width:100vw;
+    height:15vh;
+    background-color: #ffe335;
+    position:fixed;
+    top:0;
+    z-index:5;
+    padding:2vh;
+}
+#header h1{font-weight:800; font-family:'Oswald',Arial,Verdana,sans-serif !important;}
 
+#wrapper{
+    margin-top:15vh;
+    height:85vh;
+    padding:4%;
+}
+#inner-wrapper{ background-color:#ecf0f1;padding:3%;border-radius:10px; }
 .carousel,
 .item,
 .active {
@@ -18,7 +35,8 @@ body {
 .carousel-inner {
     height: 100%;
 }
-
+.carousel-caption{ text-align:center; }
+.carousel-caption h2{position:absolute; bottom:20px; left:30%}
 /* Background images are set within the HTML using inline CSS, not here */
 
 .fill {
@@ -40,12 +58,6 @@ div{
     background-size: contain;
 }
 
-
-
-.small{
-    height: 10% !important;
-    background-color: #ffe335;
-}
 .carousel-indicators li{
     display: none;
 }
